--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Just Tech News</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
 <body>
   <div class="wrapper">
     <header>
-      <h1>
+        <h1>
         <a href="/">Just Tech News</a>
-      </h1>
+        </h1>
+        <nav>
+        <a href="/login">login</a>
+        </nav>
     </header>
     <main>
       {{{ body }}}
@@ -22,7 +25,7 @@
       Thanks for visiting!
     </footer>
   </div>
-
+  <script src="/javascript/logout.js"></script>
 </body>
 
 </html>
